syntax = "proto3";

package proto;

option go_package = "swrc/proto/pb";

message ManageAccountRoleRequest{
 	string account_id = 1;        
	string new_role = 2;          
}